# algorist

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  algorist.cpp
Part_1_Practical_Algorithm_Design/chapter_1/: README.md
common/: combinatorics.cpp  combinatorics.h
part_1/: README.md
part_1/chapter_1/: README.md  programs.cpp  programs.h
part_1/chapter_2/: README.MD
part_1/chapter_3/: README.md
part_1/chapter_4/: README.md
part_1/chapter_5/: README.md
part_1/chapter_6/: README.md
part_1/chapter_7/: README.md
part_1/chapter_8/: README.md
part_1/chatper_9/: README.md
practical_algorithm_design/1_introduction_to_algorithm_design/: README.md
practical_algorithm_design/2_algorithm_analysis/: README.MD
practical_algorithm_design/3_data_structures/: README.md
practical_algorithm_design/4_sorting_and_searching/: README.md
practical_algorithm_design/5_graph_traversal/: README.md
practical_algorithm_design/6_weighted_graph_algorithms/: README.md
practical_algorithm_design/7_combinatorial_search_and_heuristic_methods/: README.md
practical_algorithm_design/8_dynamic_programming/: README.md
practical_algorithm_design/9_intractable_problems_and_approximation_algorithms/: README.md
practical_alorithm_design/: README.md
practical_alorithm_design/1_introduction_to_algorithm_design/: README.md  programs.cpp
practical_alorithm_design/5_graph_traversal/: README.md
practical_alorithm_design/7_combinatorial_search_and_heuristic_methods/: README.md
the_hitchhiker_guide_to_algorithms/: README.md
(+7 files in other folders)
